--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
             <div class="aboutme hidden">
                 <div>
                     <h2>Who am I?</h2>
-                    <p>I'm a UX Professional with over 16 years of experience. I have designed and developed small to
-                        enterprise web, mobile and desktop applications across multiple platforms. I'm also have a
-                        Bachelors
-                        of Fine Arts in
-                        Commercial Art, and a Executive MBA which I use to lead
-                        development teams and show return on investment, and capture user feedback for future
-                        improvements
-                        for applications developed once completed.</p>
+                    <p>I'm a User Experience Professional and Web Application Architect with over 16 years of
+                        experience. I have designed and developed small business to
+                        enterprise web, mobile and desktop applications across multiple platforms.</p>
+
+                    <p>I also have a
+                        Bachelors of Fine Arts in Commercial Art, along with an Executive MBA which I use to lead
+                        development teams and show solution owners return on investment, and capture user feedback for
+                        future improvements for applications developed once completed.</p>
                     </p>
                 </div>
             </div>
@@ -56,18 +56,17 @@
             <div class="left hidden">
                 <h2>Types of work I do</h2>
                 <h3>Web Application Development <span aria-label="Male Programmer">👨‍💻</span></h3>
-                <p>Using the latest technologies like React, Angular &amp; TypeScript, I can create amazing web
+                <p>Using the latest web technologies like React, Angular &amp; TypeScript, I can create amazing web
                     applications for your business.</p>
                 <h3>User Experience <abbr>(UX)</abbr> Design <span aria-label="Art Pallet">🎨</span></h3>
-                <p>I can also develop application flows using my background in design and accessiblity</p>
+                <p>I can also design bespoke application flows using my background in design and accessiblity</p>
                 <h3>Data Visulization <span aria-label="Data Visulization Chart">📊</span></h3>
                 <p>Using the latest technologies like <a target="_blank" href="https://d3js.org/"
                         hreflang="en-us">D3.js</a> I can create amazing data visualizations for your business.
                 </p>
                 <h3>Business Analysis <span aria-label="Briefcase">💼</span></h3>
                 <p>As part of my UX experience background, along with my Executive MBA I can analyse business strategies
-                    for
-                    applications/designs/and customer needs to maximize ROI for any project.</p>
+                    for applications/designs/and customer needs to maximize ROI for any project.</p>
             </div>
             <div class="right hidden">
                 <iframe src="https://www.youtube-nocookie.com/embed/jnz52whx6SE?controls=0" title="YouTube video player"
@@ -98,13 +97,17 @@
                     <img alt="Azure Fundamentals" src="certifications/microsoft-certified-azure-fundamentals (1).png" />
                     <img alt="Azure AI Engineer" src="certifications/azure-ai-engineer-600x600.png" />
                     <img alt="Accessibility In Action" src="certifications/accessibility-in-action.png" />
-                    <img alt="Microsoft Certified- Dynamics 365 Fundamentals." src="certifications/microsoft-certified-dynamics-365-fundamentals.png" />
-                    <img alt="programming-in-html5-with-javascript-and-css3" src="certifications/exam-480-programming-in-html5-with-javascript-and-css3.png" />
-                    <img alt="Worldwide Communities SME - 2019" src="certifications/worldwide-communities-community-sme-2019.png" />
-                    <img alt="Worldwide Communities SME - 2018" src="certifications/worldwide-communities-community-sme-2018.png" />
+                    <img alt="Microsoft Certified- Dynamics 365 Fundamentals."
+                        src="certifications/microsoft-certified-dynamics-365-fundamentals.png" />
+                    <img alt="programming-in-html5-with-javascript-and-css3"
+                        src="certifications/exam-480-programming-in-html5-with-javascript-and-css3.png" />
+                    <img alt="Worldwide Communities SME - 2019"
+                        src="certifications/worldwide-communities-community-sme-2019.png" />
+                    <img alt="Worldwide Communities SME - 2018"
+                        src="certifications/worldwide-communities-community-sme-2018.png" />
                 </div>
             </div>
-            <div class="right hidden"> 
+            <div class="right hidden">
                 <h2>Certifications</h2>
                 <p>Here are a few of my Certifications achived over the years.</p>
             </div>
@@ -114,20 +117,25 @@
     <section>
         <h2>Publications</h2>
         <p>*NOTE: These publications are now depricated due to the time since released.</p>
-        <p>If you did buy a copy (thank you 🙏), and if you have any questions you can contact me using the information below.</p>
+        <p>If you did buy a copy (thank you 🙏), and if you have any questions you can contact me using the information
+            below.</p>
         <div class="container">
-           
+
             <div class="left hidden text-center">
                 <img alt="Book Cover" class="responsive" src="assets/masterjsperf.jpg" />
                 <h3>Mastering JavaScript High-Performance <small>(Released 2015, 2nd Publishing in 2017)</small></h3>
                 <p>Master the art of building, deploying, and optimizing faster web applications with JavaScript.</p>
-                <a target="_blank" hreflang="en-us" href="https://www.amazon.com/Mastering-JavaScript-High-Performance-Adams/dp/1784397296/ref=sr_1_1?ie=UTF8&qid=1522164060&sr=8-1&keywords=Mastering+JavaScript+High-Performance">View on Amazon.com</a>
+                <a target="_blank" hreflang="en-us"
+                    href="https://www.amazon.com/Mastering-JavaScript-High-Performance-Adams/dp/1784397296/ref=sr_1_1?ie=UTF8&qid=1522164060&sr=8-1&keywords=Mastering+JavaScript+High-Performance">View
+                    on Amazon.com</a>
             </div>
-            <div class="right hidden text-center"> 
+            <div class="right hidden text-center">
                 <img alt="Book Cover" class="responsive" src="assets/learnpython.jpg" />
                 <h3>Learning Python Data Visualization <small>(Released 2014)</small></h3>
                 <p>Master how to build dynamic HTML5-ready SVG charts using Python and the Pygal library.</p>
-                <a target="_blank" hreflang="en-us" href="https://www.amazon.com/Learning-Python-Data-Visualization-Adams/dp/1783553332/ref=sr_1_1_sspa?s=books&ie=UTF8&qid=1522164125&sr=1-1-spons&keywords=Learning+Python+Data+Visualization&psc=1">View on Amazon.com</a>
+                <a target="_blank" hreflang="en-us"
+                    href="https://www.amazon.com/Learning-Python-Data-Visualization-Adams/dp/1783553332/ref=sr_1_1_sspa?s=books&ie=UTF8&qid=1522164125&sr=1-1-spons&keywords=Learning+Python+Data+Visualization&psc=1">View
+                    on Amazon.com</a>
             </div>
         </div>
     </section>
@@ -135,7 +143,8 @@
         <div class="container">
             <div class="left hidden">
                 <h2>Contact Me</h2>
-                <p>Looking for someone with my skillsets, professional exprience, something else? You can reach me below.
+                <p>Looking for someone with my skillsets, professional exprience, something else? You can reach me
+                    below.
             </div>
             <div class="right hidden">
                 <h3>Phone</h3>
