--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
                 <p>I can also design bespoke application flows using my background in design and accessiblity</p>
                 <h3>Data Visulization <span aria-label="Data Visulization Chart">📊</span></h3>
                 <p>Using the latest technologies like <a target="_blank" href="https://d3js.org/"
-                        hreflang="en-us">D3.js</a> I can create amazing data visualizations for your business.
+                        hreflang="en-us">D3.js</a> I can create amazing data visualizations for your business. I also
+                    have experience developing infografics and data-accurate animations like this one.
                 </p>
                 <h3>Business Analysis <span aria-label="Briefcase">💼</span></h3>
                 <p>As part of my UX experience background, along with my Executive MBA I can analyse business strategies
@@ -123,8 +124,10 @@
 
             <div class="left hidden text-center">
                 <img alt="Book Cover" class="responsive" src="assets/masterjsperf.jpg" />
-                <h3 class="text-center">Mastering JavaScript High-Performance <br /><small>(Released 2015, 2nd Publishing in 2017)</small></h3>
-                <p class="text-center">Master the art of building, deploying, and optimizing faster web applications with JavaScript.</p>
+                <h3 class="text-center">Mastering JavaScript High-Performance <br /><small>(Released 2015, 2nd
+                        Publishing in 2017)</small></h3>
+                <p class="text-center">Master the art of building, deploying, and optimizing faster web applications
+                    with JavaScript.</p>
                 <p class="text-center"></p><a target="_blank" hreflang="en-us"
                     href="https://www.amazon.com/Mastering-JavaScript-High-Performance-Adams/dp/1784397296/ref=sr_1_1?ie=UTF8&qid=1522164060&sr=8-1&keywords=Mastering+JavaScript+High-Performance">View
                     on Amazon.com</a></p>
@@ -132,10 +135,11 @@
             <div class="right hidden text-center">
                 <img alt="Book Cover" class="responsive" src="assets/learnpython.jpg" />
                 <h3 class="text-center">Learning Python Data Visualization <br /><small>(Released 2014)</small></h3>
-                <p class="text-center">Master how to build dynamic HTML5-ready SVG charts using Python and the Pygal library.</p>
+                <p class="text-center">Master how to build dynamic HTML5-ready SVG charts using Python and the Pygal
+                    library.</p>
                 <p class="text-center"><a target="_blank" hreflang="en-us"
-                    href="https://www.amazon.com/Learning-Python-Data-Visualization-Adams/dp/1783553332/ref=sr_1_1_sspa?s=books&ie=UTF8&qid=1522164125&sr=1-1-spons&keywords=Learning+Python+Data+Visualization&psc=1">View
-                    on Amazon.com</a></p>
+                        href="https://www.amazon.com/Learning-Python-Data-Visualization-Adams/dp/1783553332/ref=sr_1_1_sspa?s=books&ie=UTF8&qid=1522164125&sr=1-1-spons&keywords=Learning+Python+Data+Visualization&psc=1">View
+                        on Amazon.com</a></p>
             </div>
         </div>
     </section>
