--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <section>
         <div class="container">
             <div class="left hidden">
-                <h2>Consulting</h2>
+                <h2>Consulting / Site-work</h2>
                 <p>Businesses don't work only in one region, sometimes to make things work, you need to go on-site and
                     help
                     customers where they are located. With 16 years consulting experience I've learned how to travel
@@ -110,7 +110,7 @@
             </div>
             <div class="right hidden">
                 <h2>Certifications</h2>
-                <p>Here are a few of my Certifications achived over the years.</p>
+                <p>Here are a few of my Certifications achived over the years.  Many from my experience with Microsoft Azure and other Microsoft productivity products such as Power Platform and Dynamics 365.</p>
             </div>
         </div>
     </section>
