--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <p>Using the latest web technologies like React, Angular &amp; TypeScript, I can create amazing web
                     applications for your business.</p>
                 <h3>User Experience <abbr>(UX)</abbr> Design <span aria-label="Art Pallet">🎨</span></h3>
-                <p>I can also design bespoke application flows using my background in design and accessiblity</p>
+                <p>I can also design bespoke application flows using my background in design and accessiblity, including A, AA, AAA and 508 compliance.</p>
                 <h3>Data Visulization <span aria-label="Data Visulization Chart">📊</span></h3>
                 <p>Using the latest technologies like <a target="_blank" href="https://d3js.org/"
                         hreflang="en-us">D3.js</a> I can create amazing data visualizations for your business. I also
