--- a/index.html
+++ b/index.html
@@ -56,10 +56,14 @@
             <div class="left hidden">
                 <h2>Types of work I do</h2>
                 <h3>Web Application Development <span aria-label="Male Programmer">👨‍💻</span></h3>
-                <p>Using the latest web technologies like React, Angular &amp; TypeScript, I can create amazing web
+                <p>Using the latest web technologies like <a href="https://reactjs.org/" hreflang="en-us"
+                        target="_blank">React</a> <a href="https://angular.io/" hreflang="en-us"
+                        target="_blank">Angular</a> &amp; <a href="https://www.typescriptlang.org/" hreflang="en-us"
+                        target="_blank">TypeScript</a>, I can create amazing web
                     applications for your business.</p>
                 <h3>User Experience <abbr>(UX)</abbr> Design <span aria-label="Art Pallet">🎨</span></h3>
-                <p>I can also design bespoke application flows using my background in design and accessiblity, including A, AA, AAA and 508 compliance.</p>
+                <p>I can also design bespoke application flows using my background in design and accessiblity, including
+                    A, AA, AAA and 508 compliance.</p>
                 <h3>Data Visulization <span aria-label="Data Visulization Chart">📊</span></h3>
                 <p>Using the latest technologies like <a target="_blank" href="https://d3js.org/"
                         hreflang="en-us">D3.js</a> I can create amazing data visualizations for your business. I also
@@ -110,7 +114,8 @@
             </div>
             <div class="right hidden">
                 <h2>Certifications</h2>
-                <p>Here are a few of my Certifications achived over the years.  Many from my experience with Microsoft Azure and other Microsoft productivity products such as Power Platform and Dynamics 365.</p>
+                <p>Here are a few of my Certifications achived over the years. Many from my experience with Microsoft
+                    Azure and other Microsoft productivity products such as Power Platform and Dynamics 365.</p>
             </div>
         </div>
     </section>
