--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 </p>
                 <h3>Business Analysis <span aria-label="Briefcase">💼</span></h3>
                 <p>As part of my UX experience background, along with my Executive MBA I can analyse business strategies
-                    for applications/designs/and customer needs to maximize ROI for any project.</p>
+                    for applications/designs/and customer needs to maximize ROI for any project, as well as create estimates and forecasts.  While of course communicate business requirements to Designers and Developers.</p>
             </div>
             <div class="right hidden">
                 <iframe src="https://www.youtube-nocookie.com/embed/jnz52whx6SE?controls=0" title="YouTube video player"
