--- a/index.html
+++ b/index.html
@@ -84,10 +84,12 @@
     <section>
         <div class="container">
             <div class="left hidden">
-                <h2>Consulting / Site-work</h2>
-                <p>Businesses don't work only in one region, sometimes to make things work, you need to go on-site and
-                    help
-                    customers where they are located. With 16 years consulting experience I've learned how to travel
+                <h2>Consulting / Envisioning &amp; Digital Transformation</h2>
+                <p>As a consultant I've worked with customers to help them envision their digital transformation, and help
+                    them get there. Also, help them understand their business needs, and help
+                    them create a strategy to get there.</p>
+                <p>One other thing, businesses don't work only in one region, sometimes to make projects work, you need to go on-site and
+                    help customers where they are located. With 10 years consulting experience, I've learned how to travel
                     and work in my region or abroad.</p>
             </div>
             <div class="right hidden">
