--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                         development teams and show solution owners return on investment, and capture user feedback for
                         future improvements for applications developed once completed.</p>
                     </p>
+                    <p><img alt="Second photo of me" src="headshots/IMG_9417-Edit-min.jpg" class="responsive" /></p>
                 </div>
             </div>
         </div>
