--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 
 <body>
     <section>
-        <div>
+        <div class="hidden text-center">
             <img class="portrait responsive" src="IMG_9412-Edit-min.jpg" alt="Photo of Chad Adams" />
         </div>
-        <h1 class="hidden">Hello, my name is <b>Chad Adams</b>...</h1>
+        <h1 class="hidden text-center">Hello, my name is <b>Chad Adams</b>...</h1>
     </section>
     <section>
         <div class="container">
