--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description"
-        content="Chad Adams is an Web Application Architect, UI Engineer, UX Designer, and tech author with 18+ years experience" />
+        content="Chad Adams is an Solutions Architect, UX Engineer, UX Designer, consultant, and tech author with 16+ years experience." />
     <meta name="keywords"
-        content="Chad Adams, Chad R Adams, Web Application Architect, UI Engineer, UX Designer, technology author, speaker, Microsoft, Software Architect, HTML5, JavaScript, TypeScript, React, Electron, Linux" />
+        content="Chad Adams, Chad R Adams, Solutions Architect, UX Engineer, UX Designer, technology author, speaker, Microsoft, HTML5, JavaScript, TypeScript, React, Angular, Vue.js, Python, C#, Linux" />
     <meta name="og:type" content="website" />
     <meta name="og:url" content="https://chadadams.com/" />
     <meta name="og:site_name" content="Chad Adams.com" />
-    <meta name="og:image" content="ogimage.jpg" />
-    <meta itemprop="image" content="ogimage.jpg" />
+    <meta name="og:image" content="https://chadadams.com/ogimage.jpg" />
+    <meta itemprop="image" content="https://chadadams.com/ogimage.jpg" />
 
     <title>Chad Adams.com</title>
     <!-- <base href="https://www.chadadams.com/" target="_self" /> -->
